# zbtorch

./: .gitignore  DEV_INSTALL.md  pyproject.toml  tensor.py  value.py
scripts/: basic_test.py  cuda_test.py  neural_net.py  neural_net_py.py  spiral_c.py  spiral_py.py  test_utils.py  xor_c.py  xor_py.py
src/zbtorch/: tensor.py
tests/: test_backgrad.py
zbtorch/: CMakeLists.txt  pyproject.toml
zbtorch/src/zbtorch/: __init__.py  graph.py  nn.py  tensor.py
zbtorch/src/zbtorch_ext/: CMakeLists.txt  bindings.cpp  test.cpp
zbtorch/src/zbtorch_ext/core/: kernel.cu  neuron.cpp  tensor.cpp
zbtorch/src/zbtorch_ext/include/zbtorch_ext/: neuron.h  tensor.h
zbtorch/src/zbtorch_ext/test/: test.cpp
zbtorch/src/zbtorch_py/: __init__.py  graph.py  nn.py  tensor.py
