[project]
name = "zbtorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Bui", email = "zanbowie138@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.20",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "torch>=2.11.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
