[project]
name = "zbtorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Bui", email = "zanbowie138@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.20",
    "numpy>=2.4.4",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
