[project]
name = "zbtorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Bui", email = "zanbowie138@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.20",
    "numpy>=2.4.4",
]

[build-system]
requires = ["pybind11", "scikit-build-core>=0.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
editable.mode = "redirect"
editable.rebuild = true
build-dir = "build/{wheel_tag}"